--- a/frontend/weather-app/Dockerfile
+++ b/frontend/weather-app/Dockerfile
@@ -6,5 +6,5 @@ ENV PATH="./node_modules/.bin:$PATH"
 COPY . /app_fe
 RUN npm install -g --save 
 RUN npm install react-scripts --save
-# RUN npm run build
+RUN npm run build
 # RUN npm start
