--- a/frontend/weather-app/Dockerfile
+++ b/frontend/weather-app/Dockerfile
@@ -4,7 +4,7 @@ RUN mkdir -p /usr/src/app_fe
 WORKDIR /app_fe
 ENV PATH="./node_modules/.bin:$PATH"
 COPY . /app_fe
-RUN npm install -g --save 
-RUN npm install react-scripts --save
+RUN npm install --save 
+# RUN npm install react-scripts --save
 RUN npm run build
 # RUN npm start
